<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/blackBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:contentDescription="@string/blackbg" />

    <TextView
        android:id="@+id/beamTxt"
        android:textAppearance="@style/TextAppearance.Beam.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/whiteOverlay"
        android:layout_width="match_parent"
        android:layout_height="12sp"
        android:contentDescription="@string/whiteoverlay"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:srcCompat="@color/colorPrimary" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bars"
        android:layout_width="196dp"
        android:layout_height="match_parent"
        android:layout_marginTop="360dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/bar_1"
            android:layout_width="18dp"
            android:layout_height="160dp"
            android:contentDescription="@string/bar_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@color/black" />

        <ImageView
            android:id="@+id/bar_2"
            android:layout_width="18dp"
            android:layout_height="237dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="45dp"
            android:contentDescription="@string/bar_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bar_3"
            app:layout_constraintStart_toEndOf="@+id/bar_1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@color/black" />

        <ImageView
            android:id="@+id/bar_3"
            android:layout_width="18dp"
            android:layout_height="130dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="100dp"
            android:contentDescription="@string/bar_3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@color/black" />

        <ImageView
            android:id="@+id/bar_4"
            android:layout_width="18dp"
            android:layout_height="129dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="143dp"
            android:contentDescription="@string/bar_4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/bar_3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@color/black" />

        <ImageView
            android:id="@+id/bar_5"
            android:layout_width="18dp"
            android:layout_height="190dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="65dp"
            android:contentDescription="@string/bar_5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bar_6"
            app:layout_constraintStart_toEndOf="@+id/bar_4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@color/black" />

        <ImageView
            android:id="@+id/bar_6"
            android:layout_width="18dp"
            android:layout_height="161dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/bar_6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@color/black" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>